--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,6 +1,3 @@
-@import url(common.css);
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Rufina&display=swap');
-
 .main__about-us__footer__text__dash{
     color:var(--dash-color)
 }
@@ -16,12 +13,46 @@
     width:25%;
 }
 .main__about-us__text-box__text{
-    font-family: 'Rufina', serif;
+    font-family:var(--font-rufina-family);
     font-style: italic;
     font-size:25px;
-    color:rgb(116, 116, 116);
+    color:var(--font-color-sample-1);
     display: block;
     width: 25%;
 
 }
-font-family: 'Nunito', sans-serif;
+.main__about-us__footer__text{
+    font-family:var(--font-rufina-family);
+    font-style: normal;
+    font-size:17px;
+    color:var(--font-color-sample-1);
+    
+    font-weight:400;
+}
+.main__about-us__right__name-box__name{
+    font-family:var(--font-nunito-family);
+    font-style: normal;
+    font-size:12px;
+    color:var(--font-color-sample-1);
+    display: block;
+    width: 25%;
+}
+.main__about-us__right__article-name-box__name{
+    font-family:var(--font-rufina-family);
+    font-style: normal;
+    font-weight:400;
+    font-size:48px;
+    color:var(--font-color-sample-2);
+    display: block;
+    width: 25%;
+}
+.main__about-us__right__article-box__text{
+font-family:var(--font-nunito-family);
+    font-style: normal;
+    font-size:17px;
+    color:var(--font-color-sample-1);
+    display: block;
+    width: 25%;
+    font-weight: 400;
+    
+}
