--- a/css/common.css
+++ b/css/common.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;400&family=Rufina&display=swap');
+
 :root {
     --dash-color:  rgb(194, 161, 138);
-   
+    --font-color-sample-1:rgb(116, 116, 116);
+    --font-color-sample-2:rgb(56, 56, 56);
+    --font-rufina-family: 'Rufina', serif; 
+    --font-nunito-family: 'Nunito', sans-serif;
 }
-* {
-    margin: 0;
-    padding: 0;
-}
+
 
