--- a/css/common.css
+++ b/css/common.css
@@ -4,6 +4,7 @@
     --dash-color:  rgb(194, 161, 138);
     --main-color:rgb(116, 116, 116);
     --font-color-sample-1:rgb(56, 56, 56);
+    --font-color-sample-2: rgb(121, 121, 121);
     --font-rufina-family: 'Rufina', serif; 
     --font-nunito-family: 'Nunito', sans-serif;
 }
