--- a/css/common.css
+++ b/css/common.css
@@ -23,3 +23,8 @@ h4 {
     font-weight: 600;
 }
 
+h2 {
+    font-family: var(--font-nunito-family);
+    font-size: 12px;
+    font-weight: 600;
+}
