--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
 @import url(header.css);
 @import url(common.css);
-@import url(about-us.css)
+@import url(about-us.css);
+@import url(history.css);
