--- a/css/header.css
+++ b/css/header.css
@@ -3,22 +3,31 @@
     color:var(--dash-color);
 }
 /* Roman Grycyshyn Block Start */
+
+
+.header__top-row-logo {
+    box-sizing: 95px auto;
+    margin-left: 120px;
+    padding-top: 35px;
+}
+
+
+
 .header__entry-block {
     background-image: url(../img/background-logo.webp);
+    background-position: -255px center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 80% center;
+    height: 100vh;
     width: 100%;
-    height: 700px;
 }
 .header__info {
     background-color: white;
-    padding: 37px 37px 37px 37px;
-    margin: 0px 0px 0px 0px;
+    padding: 45px 30px 45px 30px;
     block-size: 300px;
-    margin-right: 700px;
-    margin-left: 100px;
-    margin-top: 100px;
+    margin-right: 790px;
+    margin-left: 120px;
+    margin-top: 180px;
 }
 
 .header__introduction {
