--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;400&family=Rufina&display=swap');
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 :root {
     --dash-color:  rgb(194, 161, 138);
     --main-color:rgb(116, 116, 116);
@@ -7,6 +12,16 @@
     --font-color-sample-2: rgb(121, 121, 121);
     --font-rufina-family: 'Rufina', serif; 
     --font-nunito-family: 'Nunito', sans-serif;
+}
+
+img {
+    display: block;
+}
+
+h2 {
+    font-family: var(--font-nunito-family);
+    font-size: 12px;
+    font-weight: 600;
 }
 
 h3 {
@@ -23,9 +38,5 @@ h4 {
     font-weight: 600;
 }
 
-h2 {
-    font-family: var(--font-nunito-family);
-    font-size: 12px;
-    font-weight: 600;
-}
+
 
