--- a/css/why_choose_us.css
+++ b/css/why_choose_us.css
@@ -1,6 +1,6 @@
 
 .why_choose_us__bacground {
-    background-image: url(../img/background-logo.webp);
+    background-image: url(../img/why_choose_us.png);
     background-position: -965px center;
     background-repeat: no-repeat;
     background-size: cover;
