--- a/css/why_choose_us.css
+++ b/css/why_choose_us.css
@@ -1,5 +1,5 @@
 
-.why_choose_us__bacground {
+.why_choose_us {
     background-image: url(../img/why_choose_us.png);
     background-position: -965px center;
     background-repeat: no-repeat;
