--- a/css/history.css
+++ b/css/history.css
@@ -9,21 +9,17 @@
     padding-left: 15px;
     text-align: center;
 }
-
 .history h2{
 color: var(--font-color-sample-2)
 }
-
 .history h3{
     margin-top: 20px;
     font-size: 28px;
-    color: rgb(33, 33, 33);
+    color: rgb(21, 21, 21);
 }
-
 .history h4{
     color: rgb(56, 56, 56);
 }
-
 .history span{
     color: var(--dash-color);
 }
@@ -43,7 +39,6 @@ margin-top: 20px;
 padding-left: 15px;
 padding-right: 15px;
 }
-
 .beginning, .featured, .first-offline-store {
 border: solid;
 border-color: rgb(248, 243, 241);
@@ -55,7 +50,6 @@ justify-content: space-between;
 align-items: center;
 text-align: center;
 }
-
 .history img {
     width: 70px;
     margin-bottom: 15px;
@@ -66,4 +60,37 @@ text-align: center;
     font-weight: 400;
     color: rgb(116, 116, 116);
     line-height: 25px;
+}
+@media (min-width: 770px){
+    .history__main{
+        display: grid;
+        gap: 10px;
+        grid-template-columns: 1fr 1fr;
+    }
+    .history img{
+        width: 120px;
+    }
+    .history h3{
+        font-size: 48px;
+    }
+}
+@media (min-width: 995px){
+    .history__main{
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-top: -30px;
+        margin-left: -15px;
+        margin-right: -15px;
+        padding-right: 50px;
+        padding-left: 50px;
+        padding-top: 50px;
+    }
+    .history{
+        padding-top: 130px;
+        padding-bottom: 65px;
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    .beginning, .featured, .first-offline-store{
+        padding: 45px 40px;
+    }
 }
