added color to h2 and h4

--- a/css/common.css
+++ b/css/common.css
@@ -10,6 +10,7 @@
     --main-color:rgb(116, 116, 116);
     --font-color-sample-1:rgb(56, 56, 56);
     --font-color-sample-2: rgb(121, 121, 121);
+    --font-color-sample-3: #383838;
     --font-rufina-family: 'Rufina', serif; 
     --font-nunito-family: 'Nunito', sans-serif;
 }
@@ -22,6 +23,7 @@ h2 {
     font-family: var(--font-nunito-family);
     font-size: 12px;
     font-weight: 600;
+    color: var(--font-color-sample-2);
 }
 
 h3 {
@@ -36,6 +38,7 @@ h4 {
     font-family: var(--font-nunito-family);
     font-size: 22px;
     font-weight: 600;
+    color: var(--font-color-sample-3);
 }
 
 
