--- a/css/header.css
+++ b/css/header.css
@@ -64,16 +64,20 @@ h1 {
 }
 
 .header__shop-now-link-button-white {
+    font-family: var(--font-nunito-family);
     border-style: solid;
     border-color: var(--font-color-sample-1);  
     background-color: var(--font-color-sample-1);
     padding: 25px;
     padding-top: 10px;
     padding-bottom: 10px;
+    color: white;
+    text-decoration: none;
 }
 
 .header__about-us-link-button-black {
     color: var(--font-color-sample-1);
+    text-decoration: none;
     font-weight: 600;
     line-height: normal;
     font-size: 17px;
@@ -121,7 +125,7 @@ Mobile Version */
         font-weight: 600;
         line-height: normal;
         font-size: 17px;
-        font-family: var(--font-nunito-family);
+        
         text-decoration: none;
     }
     a:hover {
