--- a/css/header.css
+++ b/css/header.css
@@ -101,6 +101,117 @@ h1 {
 /* Roman Grycyshyn Block End
 Mobile Version */
 
+/* Roman Grycyshyn Desktop Vesion Start */
+@media (min-width: 600px) {
+    .header__entry-block {
+        background-position: 70% 50%;
+        background-size: cover;
+        height: 85vh;
+
+    }
+
+    .header__top-row-logo {
+        margin-left: 27px;
+    }
+
+    .header__info {
+        background-position: 50% 50%;
+        margin-left: 17px;
+        margin-right: 30px;
+        display: flex;
+        flex-direction: column;
+        margin-top: 150px;  
+    }
+
+    .header__buttons {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .header__slogan {
+        font-size: 49px;
+    }
+
+    .header__our-description {
+        padding-right: 30px;
+    }
+
+    .header__shop-now-link-button-white {
+        margin-left: 8px;
+        margin-top: 10px;
+    }
+
+    .header__about-us-link-button-black {
+        margin-top: 10px;
+        margin-left: 35px;
+    }
+}
+
+@media (min-width: 770px) {
+    .header__entry-block {
+        background-size: cover;
+        height: 100vh;
+
+    }
+
+    .header__info {
+        margin-top: 145px;
+        margin-left: 35px;
+        margin-right: 400px;
+        padding-right: 20px;
+        padding-top: 30px;
+        padding-bottom: 45px;
+        
+    }
+    .header__slogan {
+        font-size: 40px;
+    }
+
+    .header__buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .header__about-us-link-button-black {
+        margin-left: 8px;
+        margin-top: 30px;
+    }
+
+}
+
+@media (min-width: 880px) {
+    .header__top-row-logo {
+        margin-left: 35px;
+    }
+
+    .header__entry-block {
+        background-size: cover;
+        height: 100vh;
+        background-position: 90% 50%;
+    }
+    
+
+    .header__info {
+        margin-top: 200px;
+        padding-right: 10px;
+        margin-right: 450px;
+    }
+
+    .header__buttons {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+    }
+
+    .header__about-us-link-button-black {
+        margin-top: 10px;
+        margin-left: 25px;
+    }
+}
+/* Roman Grycyshyn Desktop Vesion End */
+
 /*Sofiia block start*/
 @media (min-width: 990px) {
     .header__top-row {
@@ -110,7 +221,9 @@ Mobile Version */
         padding: 30px 40px;
     }
     .header__top-row-logo{
-        width: 95%;
+        width: 100%;
+        margin-left: 0px;
+        margin-top: -30px;
     }
     .header__top-row-logo:hover{
         cursor: pointer;
@@ -125,7 +238,6 @@ Mobile Version */
         font-weight: 600;
         line-height: normal;
         font-size: 17px;
-        
         text-decoration: none;
     }
     a:hover {
@@ -133,5 +245,59 @@ Mobile Version */
         cursor: pointer;
         text-decoration: underline;
     }
+
+    /* Roman Hrytsyshyn Desktop Version Part 2 */
+
+    .header__info {
+        margin-top: 145px;
+        margin-right: 490px;
+        margin-left: 40px; 
+    }
+
+    .header__entry-block {
+        background-size: cover;
+        height: 100vh;
+        background-position: 65% 50%;
+    }
+
+
+    /* Roman Hrytsyshyn Desktop Version Part 2 */
 }
 /* Sofiia block end */
+
+/* Roman Hrytsyshyn Desktop Version Part 3 */
+
+@media (min-width: 1150px) {
+    .header__entry-block {
+        background-size: cover;
+        height: 100vh;
+        background-position: 90% 50%;  
+    }
+
+    .header__top-row-logo {
+        margin-left: 110px;
+    }
+
+    .header__info {
+        margin-top: 175px;
+        margin-right: 50%;
+        margin-left: 10%;
+        margin-bottom: 10px;
+        padding-right: 0;
+        padding-bottom: 45px;
+    }
+
+    .header__buttons {
+        padding-top: 25px;
+    }
+
+    .header__slogan {
+        font-size: 48px;
+    }
+
+    .header__our-description {
+        padding-top: 25px;
+    }
+}
+
+/* Roman Hrytsyshyn Desktop Version Part 3 */
