--- a/css/why_choose_us.css
+++ b/css/why_choose_us.css
@@ -1,10 +1,10 @@
 
 .why_choose_us {
-    background-image: url(../img/why_choose_us.png);
-    background-size: cover;
-    width: 100%;
-  
-}
+padding-top: 90px;
+padding-bottom: 90px;}
+
+
+
 
 .why_choose_us__text{
     width: 300px;
