--- a/css/why_choose_us.css
+++ b/css/why_choose_us.css
@@ -33,15 +33,15 @@
     color:var(--dash-color)
 }
 
-ol{
-    list-style: none;
-}
-ol > li{
+.why_choose_us__text__list{
+        list-style: none;}
+    
+.why_choose_us__text__list > li{
     padding-left: 20px;
     position: relative;
     margin: 10px;
 }
-ol > li:before{
+.why_choose_us__text__list > li:before{
     content:'✔';
     position: absolute; 
     top: 0; 
@@ -49,37 +49,17 @@ ol > li:before{
     color: var(--dash-color);
 }
 
-.why_choose_us__lean-more-link {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-top: 20px;
-    font-family: var(--font-nunito-family);
-    border-style: solid;
-    border-color: var(--font-color-sample-1);  
-    background-color: var(--font-color-sample-1);
-    padding: 25px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: white;
-    text-decoration: none;
-}
-.why_choose_us__lean-more-link:hover {
-    background-color: var(--font-color-sample-1);
-    color: rgb(10, 10, 10);
-    border-color: var(--font-color-sample-1);
-}
 
-.why_choose_us__text__list{
+.why_choose_us__text__list1{
     font-size: 17px;
     font-family: var(--font-nunito-family);
     font-weight: 400;
     color: rgb(116, 116, 116);
     line-height: 25px; 
     margin-bottom: 30px;}
-    accessories__bags-item, 
 
-.why_choose_us__text__list1 {
+
+.why_choose_us__text__paragraph {
     font-size: 17px;
     font-family: var(--font-nunito-family);
     font-weight: 400;
@@ -87,6 +67,28 @@ ol > li:before{
     line-height: 25px;
     margin-left: 15px;
       }
+
+.why_choose_us__lean-more-link {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding-top: 20px;
+        font-family: var(--font-nunito-family);
+        border-style: solid;
+        border-color: var(--font-color-sample-1);  
+        background-color: var(--font-color-sample-1);
+        padding: 25px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        color: white;
+        text-decoration: none;
+    }
+.why_choose_us__lean-more-link:hover {
+        background-color: var(--font-color-sample-1);
+        color: rgb(10, 10, 10);
+        border-color: var(--font-color-sample-1);
+}
+
 
     @media(max-width:768px){
         .why_choose_us__background{
