--- a/css/why_choose_us.css
+++ b/css/why_choose_us.css
@@ -28,7 +28,26 @@
     text-align: left;
     justify-content: flex-start;
   }   
-
+.why_choose_us__h3{
+   position:relative;
+   text-transform: none;
+   text-decoration: none;
+   margin-top: 20px;
+   max-width: 100%;
+   word-wrap: break-word;
+   vertical-align: baseline;
+   text-align: left;
+   box-sizing: border-box;
+   border: 0;
+}
+ 
+h3{
+    display: block;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+}
 .why_choose_us__text__slogan__dash{
     color:var(--dash-color)
 }
@@ -114,6 +133,12 @@ p{
         .why_choose_us__text__paragraph{
         font-size: 17px;
         line-height: 1.5;
+        letter-spacing: 0;
+    }
+
+        .why_choose_us__h3{
+        font-size: 28px;
+        line-height: 1.2;
         letter-spacing: 0;
     }
 }
